--- a/style.css
+++ b/style.css
@@ -253,6 +253,12 @@ figure {
     padding: 1rem;
 }
 
+.fade {
+  /* margin: 50px;
+  padding: 50px;
+  background-color: lightgreen; */
+  opacity: 1;
+}
 
 
 
